summaries/errors.txt
ğŸŸ¢ Run Timestamp: 2025-07-22 11:48:15 AM EDT
âŒ combine_pitcher_weather_park_away ERROR (2025-07-22 11:49:46 AM EDT):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 30
    on=["last_name, first_name", "away_team
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

---

